@@ -1,3 +1,10 @@
+2009-05-07  Janis Johnson  <janis187@us.ibm.com>
+
+	PR middle-end/39986
+	* dfp.c (encode_decimal32, decode_decimal32, encode_decimal64,
+	decode_decimal64, encode_decimal128, decode_decimal128): Avoid
+	32-bit copy into long.
+
 2009-05-07  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/40057
